# safer-file-handles

./: NEWS  README.markdown  Setup.hs  safe-files.cabal  safer-file-handles.cabal
Data/ByteString/: SaferFileHandles.hs
Data/ByteString/Char8/: SaferFileHandles.hs
Data/ByteString/Lazy/: SaferFileHandles.hs
Data/ByteString/Lazy/Char8/: SaferFileHandles.hs
System/IO/: SafeFiles.hs  SaferFileHandles.hs
System/IO/SaferFileHandles/: Internal.hs  Unsafe.hs
